@startuml
'https://plantuml.com/class-diagram

interface Chart {
    +{abstract}display():void
}

class HistogramChart implements Chart{
    +HistogramChart()
    +display():void
}

class LineChart implements Chart {
    +LineChart()
    +display():void
}

class PieChart implements Chart {
    +PieChart()
    +display():void
}

class ChartFactory {
    +{static}getChart(type:Type):Chart
}

PieChart <.. ChartFactory
LineChart <.. ChartFactory
HistogramChart <.. ChartFactory

@enduml